--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.16.13",
+    "chart.js": "^3.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
